# yonclaw

./: .gitignore  CHANGELOG.md  README.md  README_EN.md
cli/: Cargo.toml
cli/src/: api.rs  main.rs
cli/src/commands/: agents.rs  backup.rs  browser.rs  channels.rs  chat.rs  completion.rs  config.rs  cron.rs  doctor.rs  infer.rs  mcp.rs  memory.rs  message.rs  mod.rs  models.rs  plugins.rs  search.rs  sessions.rs  skills.rs  status.rs  tui.rs
local-app/: Cargo.toml  tauri.conf.json
local-app/bundled-skills/1password/: SKILL.md
local-app/bundled-skills/apple-reminders/: SKILL.md
local-app/bundled-skills/bluebubbles/: SKILL.md
local-app/bundled-skills/canvas/: SKILL.md
local-app/bundled-skills/clawhub/: SKILL.md
local-app/bundled-skills/deep-research/: SKILL.md  deep-research.sh
local-app/bundled-skills/gh-issues/: SKILL.md
local-app/bundled-skills/imsg/: SKILL.md
local-app/bundled-skills/mail-ops/: SKILL.md
local-app/bundled-skills/nano-banana-pro/: SKILL.md
local-app/bundled-skills/nano-banana-pro/scripts/: generate_image.py  test_generate_image.py
local-app/bundled-skills/oa-common/: SKILL.md
local-app/bundled-skills/oa-meeting/: SKILL.md
local-app/bundled-skills/oa-schedule/: SKILL.md
local-app/bundled-skills/oa-task/: SKILL.md
local-app/bundled-skills/openai-image-gen/: SKILL.md
local-app/bundled-skills/openai-image-gen/scripts/: gen.py  test_gen.py
local-app/bundled-skills/openai-whisper-api/: SKILL.md
local-app/bundled-skills/openai-whisper-api/scripts/: transcribe.sh
local-app/bundled-skills/sag/: SKILL.md
local-app/bundled-skills/session-logs/: SKILL.md
local-app/bundled-skills/sherpa-onnx-tts/: SKILL.md
local-app/bundled-skills/spec-generator/: SKILL.md
local-app/bundled-skills/spec-generator/scripts/: parse_excel.py  plan_iteration.py  scan_project.py
local-app/bundled-skills/tmux/: SKILL.md
local-app/bundled-skills/trello/: SKILL.md
local-app/bundled-skills/weather/: SKILL.md
local-app/icons/: icon.icns  icon.icns.old  icon.ico.old
local-app/skills/: team-mode.md
local-app/src/: admin_server.rs  backend_manager.rs  config.rs  crypto.rs  daemon.rs  main.rs  routing.rs  telemetry.rs
local-app/src-tauri/: tauri.conf.json
local-app/src/agent/: agent_loop.rs  agent_store.rs  approval.rs  auto_verify.rs  browser.rs  cdp.rs  character_eval.rs  content_security.rs  context_engine.rs  context_guard.rs  delegate.rs  doctor.rs  dreaming.rs  execution_budget.rs  failover.rs  intent_gate.rs  learner.rs  lifecycle.rs  link_understanding.rs  llm.rs  mcp.rs  mod.rs  multimodal.rs  observer.rs  orchestrator.rs  plugin.rs  progress.rs  python_sandbox.rs  sandbox.rs  self_evolution.rs  skill_tool.rs  skills.rs  soul.rs  subagent.rs  threat_scan.rs  token_counter.rs  tool_call_sanitizer.rs  workspace.rs
local-app/src/agent/tools/: builtin.rs  (+1 more)
local-app/src/bridge/: client.rs
local-app/src/channels/: common.rs  dingtalk.rs  discord.rs  feishu.rs  manager.rs  mod.rs  slack.rs  telegram.rs  wecom.rs  weixin.rs
local-app/src/db/: mod.rs  models.rs  schema.rs
local-app/src/gateway/: api.rs
local-app/src/handlers/: agents.rs  channels_cmd.rs  helpers.rs  mcp.rs  misc.rs  mod.rs  oauth.rs  plaza.rs  plugins.rs  providers.rs  scheduler_cmd.rs  sessions.rs  skills.rs  soul.rs
local-app/src/memory/: conversation.rs  embedding.rs  factory.rs  lance.rs  loader.rs  mod.rs
local-app/src/plugin_system/: builtin_plugins.rs  bundle_compat.rs  mod.rs  plugin_api.rs  registry.rs  text_transforms.rs
local-app/src/runtime/: node.rs
local-app/src/scheduler/: engine.rs  mod.rs  planner.rs  runner.rs  seed.rs  store.rs  tools.rs  types.rs
local-app/src/sop/: engine.rs  mod.rs  types.rs
(+128 files in other folders)
