[package]
name = "xianzhu-local"
version = "1.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all", "updater", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
url = "2"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
nix = { version = "0.27", features = ["signal", "process"] }
dirs = "5.0"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
tiktoken-rs = "0.6"
lru = "0.12"
serde_yaml = "0.9"
cron = "0.13"
chrono-tz = "0.10"
tokio-util = { version = "0.7", features = ["rt"] }
regex = "1"
once_cell = "1"
libc = "0.2"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
prost = "0.13"
flate2 = "1"
tar = "0.4"
urlencoding = "2"
calamine = "0.26"
zip = "2"
walkdir = "2"
toml = "0.8"
lancedb = { version = "0.15", optional = true }
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level = "z"
lto = true
